# dpo

./: LICENSE  README.md  compare_preproc.ipynb  pyproject.toml  setup.cfg
config/: dpo_train_lg_aug14.yaml  full_train_lg_aug13.yaml  full_train_lg_aug15.yaml  full_train_lg_aug16.yaml  full_train_lg_aug17.yaml  full_train_lg_aug19.yaml  full_train_lg_aug20.yaml  full_train_lg_aug21.yaml  full_train_lg_aug23.yaml  full_train_lg_aug23_try2.yaml  full_train_lg_aug24.yaml  full_train_lg_aug24_try2.yaml  full_train_lg_aug24_try3.yaml  full_train_med_aug09.yaml  full_train_sm_aug05.yaml  full_train_sm_aug15.yaml  full_train_sm_aug19.yaml  full_train_sm_aug20.yaml  full_train_smoke.yaml  smoke_train_lg_aug13.yaml
docs/: details_Aug2024.md
scripts/: eval_prob_deltas.py  eval_win_rate.py  lambda_build_and_run.sh  train_and_eval.py
src/cdpo/: __init__.py  data_utils.py  evaluation.py  metrics.py  model_ops.py  pipelines.py  preference_eval.py  training.py
tests/: base.py  test_eval.py  test_model_ops.py  test_training.py
