[project]
name = "cdpo"
version = "0.0.1"
authors = [
    {name = "Cory Lorenz", email = "clorenz@gmail.com"},
]

dependencies = [
    "datasets==2.19.1",
    "joblib==1.3.2",
    "openai",
    "tenacity",
    "transformers",
    "torch",
]

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-cov"
]
dev = [
  "matplotlib",
  "numpy"
]