[metadata]
name = cdpo
version = 0.1.0
description = A simple Python package
author = Your Name
author_email = your.email@example.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    transformers
    torch

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest